# CodePulse

./: .gitignore  .prettierignore  AGENTS.md  README.md  electron-builder.yml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
docs/: 2026-07-16-codex-status-island-design.md  NetSpeed-Dynamic-Agent新功能规划.md  NetSpeed-Dynamic-现有项目重构计划.md  adapter-extension.md  development.md  packaging.md  product-architecture.md  troubleshooting.md
docs/plans/: 2026-07-01-mvp-foundation.md  2026-07-13-music-lyrics-refactor-design.md
docs/superpowers/plans/: 2026-07-13-music-lyrics-refactor.md  2026-07-16-codex-status-island-01-bridge-http.md  2026-07-16-codex-status-island-02-aggregator-tauri.md  2026-07-16-codex-status-island-03-agent-ui.md  2026-07-16-codex-status-island-04-hook-settings-e2e.md  2026-07-16-codex-status-island-04a-inspection-planner.md  2026-07-16-codex-status-island-04b-writer-installer.md  2026-07-16-codex-status-island-04c-settings-e2e.md  2026-07-16-codex-status-island-roadmap.md
src/: main.ts
src-tauri/: .rustfmt.toml  Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/app/: mod.rs  state.rs
src-tauri/src/commands/: audio_spectrum_commands.rs  lyrics_commands.rs  media_commands.rs  media_session_commands.rs  media_timeline.rs  mod.rs  notification_commands.rs  settings_commands.rs  system_commands.rs  system_event_commands.rs  window_commands.rs
src-tauri/src/lyrics/: cache.rs  cache_tests.rs  error.rs  matcher.rs  matcher_tests.rs  mod.rs  parser.rs  parser_tests.rs  provider_http.rs  provider_http_tests.rs  providers.rs  service.rs  service_cache.rs  service_regression_tests.rs  service_tests.rs  types.rs
src-tauri/src/lyrics/providers/: netease.rs  qq_music.rs
src/components/dashboard/: AppDialog.vue  DashboardHeader.vue  (+8 more)
src/composables/: index.ts  musicPlaybackRuntime.ts  musicTargetCoordinator.test.ts  musicTargetCoordinator.ts  trackLyricsCache.ts  useAutoStart.ts  useDialog.ts  useIslandAnimation.ts  useIslandDrag.ts  useIslandWindow.test.ts  useIslandWindow.ts  useMusicPlaybackSession.test.ts  useMusicPlaybackSession.ts  useMusicSpectrum.test.ts  useMusicSpectrum.ts  usePlaybackTimeline.test.ts  usePlaybackTimeline.ts  useTheme.ts  useTrackCover.test.ts  useTrackCover.ts  useTrackLyrics.test.ts  useTrackLyrics.ts  useUpdateChecker.ts
src/main/: index.ts
src/preload/: codePulseApi.test.ts  codePulseApi.ts  index.ts
src/renderer/: App.vue  main.ts  vite-env.d.ts
src/router/: index.ts
src/stores/: index.ts  island.test.ts  island.ts  network.ts  settings.ts
src/styles/: theme.css
src/types/: index.ts
src/views/: MainPanel.vue  WidgetIsland.vue
(+107 files in other folders)
