[package]
name = "netspeed-dynamic"
version = "2.3.8"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "netspeed_dynamic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
tauri-plugin-single-instance = "2.0.0" # 根据你的Tauri2版本调整具体小版本
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
urlencoding = "2.1.3"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
reqwest = { version = "0.12", features = ["json"] }
windows = { version = "0.58.0", features = [
    "UI_Notifications_Management", 
    "UI_Notifications", 
    "Foundation", 
    "Foundation_Collections",
    "ApplicationModel",
    "implement",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Media_Multimedia",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Media_Control",
    "Storage_Streams",
    "Win32_System_Power",
] }
rustfft = "6.2"
